1) Included a mash-up of graphic outputs for article. 2) We have broken the acf functions somewhere, a bug to be corrected

--- a/documents/WCSS2008Paper/paper.tex
+++ b/documents/WCSS2008Paper/paper.tex
@@ -60,6 +60,26 @@ AAA
 \label{fig:general_uml}
 \end{figure}
 
+\begin{figure}[htbp]
+  \begin{center}
+   \mbox{
+      \subfigure[Ask and bid prices.]{\scalebox{0.5}{\quad \quad \includegraphics[width=0.9\textwidth,height=0.8\textwidth]{../graphics/pricesPlot.pdf}}} \quad
+      \subfigure[Raw and absolute returns.]{\scalebox{0.5}{\includegraphics[width=1.00\textwidth]{../graphics/returnPlot.pdf}}}
+      }
+    \mbox{
+      \subfigure[Orderbook shape.]{\scalebox{0.5}{\includegraphics[width=1.00\textwidth]{../graphics/orderbooks.pdf}}} \quad
+      \subfigure[Trade volumes.]{\scalebox{0.5}{\includegraphics[width=1.00\textwidth]{../graphics/volumesPlot.pdf}}}
+      }
+    \mbox{
+      \subfigure[Returns histogram.]{\scalebox{0.5}{\includegraphics[width=1.00\textwidth]{../graphics/returnsHistogram.pdf}}} \quad
+      \subfigure[Autocorrelation of returns.]{\scalebox{0.5}{\includegraphics[width=1.00\textwidth]{../graphics/acfReturns.pdf}}}
+      }
+    \caption{Examples of outputs and statistics from a single run of the FinancialModel simulation for default Farmer's parametrization.}
+    \label{fig:sampleDynamics}
+  \end{center}
+\end{figure}
+
+
 \section{Verification of Correctness}
 
 \section{Overview of Implemented Models}
