Added sequence diagram to the presentation and paper

--- a/documents/WCSS2008Paper/paper.tex
+++ b/documents/WCSS2008Paper/paper.tex
@@ -55,10 +55,19 @@ AAA
 
 \begin{figure}[htb]
 \centering
-\includegraphics[width=1.0\textwidth]{../graphics/masterClassDiagram.jpg}
+\includegraphics[width=1.0\textwidth]{../graphics/masterClassDiagram.pdf}
 \caption{High-level UML class diagram of the main components and relations in the FinancialMarketModel, including the main attributes of Players and OrderBooks. Agent classes (light blue) inherit from the MASON \texttt{Steppable} interface while the master class is implementation of MASON's \texttt{SimState}.}
 \label{fig:general_uml}
 \end{figure}
+
+
+\begin{figure}[htb]
+\centering
+\includegraphics[width=1.0\textwidth]{../graphics/masterSequenceDiagram.pdf}
+\caption{High-level UML sequence diagram of the interactions between main object of the FinancialMarketModel.}
+\label{fig:general_uml}
+\end{figure}
+
 
 \begin{figure}[htbp]
   \begin{center}
