Renamed plots from Farmer with a 'Farmer-' prefix. Replaced acf and return histogram plots with representative examples. Updated paper.tex to point to these files.

--- a/documents/WCSS2008Paper/paper.tex
+++ b/documents/WCSS2008Paper/paper.tex
@@ -72,16 +72,16 @@ AAA
 \begin{figure}[htbp]
   \begin{center}
    \mbox{
-      \subfigure[Ask and bid prices.]{\scalebox{0.5}{\quad \quad \includegraphics[width=0.9\textwidth,height=0.8\textwidth]{../graphics/pricesPlot.pdf}}} \quad
-      \subfigure[Raw and absolute returns.]{\scalebox{0.5}{\includegraphics[width=1.00\textwidth]{../graphics/returnPlot.pdf}}}
+      \subfigure[Ask and bid prices.]{\scalebox{0.5}{\quad \quad \includegraphics[width=0.9\textwidth,height=0.8\textwidth]{../graphics/Farmer-pricesPlot.pdf}}} \quad
+      \subfigure[Raw and absolute returns.]{\scalebox{0.5}{\includegraphics[width=1.00\textwidth]{../graphics/Farmer-returnPlot.pdf}}}
       }
     \mbox{
-      \subfigure[Orderbook shape.]{\scalebox{0.5}{\includegraphics[width=1.00\textwidth]{../graphics/orderbooks.pdf}}} \quad
-      \subfigure[Trade volumes.]{\scalebox{0.5}{\includegraphics[width=1.00\textwidth]{../graphics/volumesPlot.pdf}}}
+      \subfigure[Orderbook shape.]{\scalebox{0.5}{\includegraphics[width=1.00\textwidth]{../graphics/Farmer-orderbooks.pdf}}} \quad
+      \subfigure[Trade volumes.]{\scalebox{0.5}{\includegraphics[width=1.00\textwidth]{../graphics/Farmer-volumesPlot.pdf}}}
       }
     \mbox{
-      \subfigure[Returns histogram.]{\scalebox{0.5}{\includegraphics[width=1.00\textwidth]{../graphics/returnsHistogram.pdf}}} \quad
-      \subfigure[Autocorrelation of returns.]{\scalebox{0.5}{\includegraphics[width=1.00\textwidth]{../graphics/acfReturns.pdf}}}
+      \subfigure[Returns histogram.]{\scalebox{0.5}{\includegraphics[width=1.00\textwidth]{../graphics/Farmer-returnsHistogram.pdf}}} \quad
+      \subfigure[Autocorrelation of returns.]{\scalebox{0.5}{\includegraphics[width=1.00\textwidth]{../graphics/Farmer-acfReturns.pdf}}}
       }
     \caption{Examples of outputs and statistics from a single run of the FinancialModel simulation for default Farmer's parametrization.}
     \label{fig:sampleDynamics}
