Modified the paper, locking it for next 2h.

--- a/documents/WCSS2008Paper/paper.tex
+++ b/documents/WCSS2008Paper/paper.tex
@@ -28,7 +28,7 @@
 \titlerunning{Financial Markets using MASON}
 \authorrunning{R. Axtell et al.}
 
-\author{Robert Axtell$^{a}$ \and CSS 739 Class Project Team}
+\author{Robert Axtell$^{a}$ \and CSS 739 Class Project Team\thanks{Programming Group: Justin Briggs, Francesco Trusiano, Maciej \L atek, Randy Marks. Data Analysis Group: Sandler Lin, Cheryl Hansen and Thomas Tzitzouris.}}
 
 
 \institute{
@@ -42,9 +42,6 @@
 
 \date{\today}
 \maketitle
-\begin{abstract}
-AAA
-\end{abstract}
 
 \keywords{Agent-based Modeling, Computational Social Science, Financial Markets}
 
